fixed icon overlap with conversion units

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -51,8 +51,12 @@
 .Weather .weather-icon {
   display: inline-block;
   position: relative;
-  top: -15px;
-  margin-left: 5px;
+  top: -17px;
+  width: 100%;
+  height: 100%;
+}
+.Weather .icon-wrapper {
+  padding-left: 0;
 }
 
 .Weather h1 {
